--- a/bar-beer-drinker-ui/src/app/welcome/welcome.component.html
+++ b/bar-beer-drinker-ui/src/app/welcome/welcome.component.html
@@ -1,7 +1,7 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4">Welcome to Bar Beer Drinker!</h1>
-    <p class="lead">This is a demo application to learn how to create a clean, responsive web interface.</p>
+    <h1 class="display-4">This is RUBarBeerDrinker!</h1>
+    <p class="lead">Created by Rahil Chertara, Matt Cho, Russell Dsani.</p>
   </div>
 </div>
 
@@ -10,24 +10,22 @@
   <p-table [value]="bars">
     <ng-template pTemplate="header">
         <tr>
-          <th>Name</th>
-          <th>Licence</th>
-          <th>Address</th>
-          <th>City</th>
-          <th>Phone</th>
+          <th>barName</th>
+          <th>barLicence</th>
+          <th>State</th>
+
         </tr>
     </ng-template>
     <ng-template pTemplate="body" let-bar>
         <tr>
           <td>
-            <a routerLink="/bars/{{ bar.name }}">
-              {{ bar.name }}
+            <a routerLink="/bars/{{ bar.barName }}">
+              {{ bar.barName }}
             </a>
           </td>
-          <td>{{ bar.license }}</td>
-          <td>{{ bar.addr }}</td>
-          <td>{{ bar.city }}</td>
-          <td>{{ bar.phone }}</td>
+          <td>{{ bar.barLicense }}</td>
+          <td>{{ bar.State }}</td>
+
         </tr>
     </ng-template>
   </p-table>
