--- a/bar-beer-drinker-ui/src/app/bar-details/bar-details.component.html
+++ b/bar-beer-drinker-ui/src/app/bar-details/bar-details.component.html
@@ -2,9 +2,9 @@
     <div class="container">
         <h1 class="display-4">{{ barName }}</h1>
         <p class="bar-details" *ngIf="barDetails">
-            {{ barDetails?.addr }} <span *ngIf="barDetails.addr && barDetails.city">|</span> {{ barDetails?.city }}
+            {{ barDetails?.barName }} <span *ngIf="barDetails.barLicense && barDetails.State">|</span> {{ barDetails?.State }}
             <br>
-            {{ barDetails?.phone }}
+            {{ barDetails?.barLicense}}
         </p>
     </div>
 </div>
@@ -16,17 +16,19 @@
         <ng-template pTemplate="header">
             <tr>
                 <th>Beer</th>
-                <th>Menufacturer</th>
+                <th>Manf</th>
                 <th>Price</th>
                 <th>Likes</th>
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-item>
             <tr>
-                <td><a routerLink="/beers/{{ item.beer }}">{{ item.beer }}</a></td>
-                <td>{{ item.manf }}</td>
-                <td>{{ item.price | currency }}</td>
-                <td>{{ item.likes }}</td>
+              <td><a routerLink="/beers/{{ item.Item_ID }}">{{ item.Item_ID }}</a></td>
+                <td>{{ item.barLicense}}</td>
+                <td>{{ item.Inventory}}</td>
+                <td>{{ item.Price}}</td>
+
+                
             </tr>
         </ng-template>
     </p-table>
