Blank templates for pages made

--- a/bar-beer-drinker-ui/src/app/app.component.html
+++ b/bar-beer-drinker-ui/src/app/app.component.html
@@ -15,6 +15,21 @@
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" routerLink="/insight">Insight</a>
       </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="/bar_page">Bar</a> <!-- Bar page added --> 
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="/drinker_page">Drinker</a> <!-- Drinker page added --> 
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="/bartender_page">Bartender</a> <!-- Bartender page added --> 
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="/manufacturer_page">Manufacturer</a> <!-- Bartender page added --> 
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="/modification_page">Modifications</a> <!-- Bartender page added --> 
+      </li>
     </ul>
   </div>
 </nav>
