--- a/bar-beer-drinker-ui/src/app/welcome/welcome.component.html
+++ b/bar-beer-drinker-ui/src/app/welcome/welcome.component.html
@@ -19,11 +19,11 @@
     <ng-template pTemplate="body" let-bar>
         <tr>
           <td>
-            <a routerLink="/bars/{{ bar.barName }}">
-              {{ bar.barName }}
+            <a routerLink="/bars/{{ bar.BarName }}">
+              {{ bar.BarName }}
             </a>
           </td>
-          <td>{{ bar.barLicense }}</td>
+          <td>{{ bar.BarLicense }}</td>
           <td>{{ bar.State }}</td>
 
         </tr>
