--- a/bar-beer-drinker-ui/src/app/beer-details/beer-details.component.html
+++ b/bar-beer-drinker-ui/src/app/beer-details/beer-details.component.html
@@ -1,3 +1,4 @@
+<!--
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
     <h1 class="display-4">{{ beerName }}</h1>
@@ -6,6 +7,14 @@
     </p>
   </div>
 </div>
+-->
+
+
+
+
+
+
+
 
 <div class="container">
   <br>
@@ -18,17 +27,39 @@
     <ng-template pTemplate="header">
       <tr>
         <th>Bar</th>
-        <th>
-          Price
-        </th>
-        <th>Customers</th>
+        
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-bar>
       <tr>
-        <td><a routerLink="/bars/{{ bar.bar }}">{{ bar.bar }}</a></td>
-        <td>{{ bar.price | currency }}</td>
-        <td>{{ bar.customers }}</td>
+        <td><a routerLink="/bars/{{ bar.bar }}">{{ bar.BarName }}</a></td>
+             
+      </tr>
+    </ng-template>
+  </p-table>
+</div>
+
+
+<div class="container">
+  <br>
+  <div>
+    <span class="font-weight-light result-count">Sold at {{ beerLocations?.length }}</span>
+    <p-dropdown class="float-right text-left" *ngIf="filterOptions" [options]="filterOptions" (onChange)="sortBy($event.value)"></p-dropdown>
+  </div>
+  <br>
+  <p-table [value]="peopleWhoDrink" sortMode="multiple" sortField="price">
+    <ng-template pTemplate="header">
+      <tr>
+        <th>Drinker</th>
+        
+        
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-drinker>
+      <tr>
+        <td>{{ drinker.DrinkerName }}</td>
+       
+        
       </tr>
     </ng-template>
   </p-table>
