--- a/bar-beer-drinker-ui/src/app/bar-details/bar-details.component.html
+++ b/bar-beer-drinker-ui/src/app/bar-details/bar-details.component.html
@@ -10,26 +10,32 @@
 </div>
 
 <div class="container">
-    <h2 class="text-center font-weight-light">Menu</h2>
+    <h2 class="text-center font-weight-light">List of top Drinkers for this Bar</h2>
     <br>
     <p-table [value]="menu">
         <ng-template pTemplate="header">
             <tr>
-                <th>Beer</th>
-                <th>Manf</th>
-                <th>Price</th>
-                <th>Likes</th>
+                <th>Name</th>
+                <th>Cost</th>
+                
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-item>
             <tr>
-              <td><a routerLink="/beers/{{ item.Item_ID }}">{{ item.Item_ID }}</a></td>
-                <td>{{ item.barLicense}}</td>
-                <td>{{ item.Inventory}}</td>
-                <td>{{ item.Price}}</td>
+              <td><a routerLink="/beers/{{ item.Item_ID }}">{{ item.DrinkerName }}</a></td>
+                <td>{{ item.totalCost}}</td>
+              
 
                 
             </tr>
         </ng-template>
     </p-table>
 </div>
+<div class="container">
+    <br>
+    <div id="bargraph"></div>
+  </div>
+  <div class="container">
+    <br>
+    <div id="bargraph"></div>
+  </div>
