--- a/bar-beer-drinker-ui/src/app/beer-details/beer-details.component.html
+++ b/bar-beer-drinker-ui/src/app/beer-details/beer-details.component.html
@@ -9,13 +9,6 @@
 </div>
 -->
 
-
-
-
-
-
-
-
 <div class="container">
   <br>
   <div>
@@ -63,4 +56,9 @@
       </tr>
     </ng-template>
   </p-table>
+</div>
+
+<div class="container">
+  <br>
+  <div id="bargraph"></div>
 </div>
