--- a/bar-beer-drinker-ui/src/app/beers/beers.component.html
+++ b/bar-beer-drinker-ui/src/app/beers/beers.component.html
@@ -1,7 +1,7 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
     <h1 class="display-4">Find your favorite beers!</h1>
-    <p class="lead">This page can be used to see all the beers in our system or just the ones by your preferred
+    <p class="lead">This page can be used to see all the beers in our system
       manufacturer.</p>
     <p-dropdown *ngIf="manufacturerOptions" [ngClass]="{ 'no-option-selected': selectedManufacturer === undefined || selectedManufacturer === null }"
       placeholder="Filter by manufacturer" [options]="manufacturerOptions" [(ngModel)]="selectedManufacturer" showClear="true"
@@ -16,13 +16,13 @@
     <ng-template pTemplate="header">
       <tr>
         <th>Name</th>
-        <th>Manufacturer</th>
+     
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-beer>
       <tr>
         <td><a routerLink="/beers/{{ beer.name }}">{{ beer.name }}</a></td>
-        <td>{{ beer.manf }}</td>
+        
       </tr>
     </ng-template>
   </p-table>
