--- a/bar-beer-drinker-ui/src/app/drinker-page/drinker-page.component.html
+++ b/bar-beer-drinker-ui/src/app/drinker-page/drinker-page.component.html
@@ -1,3 +1,47 @@
-<p>
-  drinker-page works!
-</p>
+<!--
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">{{ beerName }}</h1>
+    <p class="beer-details" *ngIf="manufacturer">
+      Made by <i>{{ manufacturer }}</i>
+    </p>
+  </div>
+</div>
+-->
+
+<div class="container">
+  <br>
+  <div>
+    <span class="font-weight-light result-count">Shows Drinker's Transactions</span>
+    <p-dropdown class="float-right text-left" *ngIf="filterOptions" [options]="filterOptions" (onChange)="sortBy($event.value)"></p-dropdown>
+  </div>
+  <br>
+  <p-table [value]="transactions" sortMode="multiple" sortField="price">
+    <ng-template pTemplate="header">
+      <tr>
+        <th>DrinkerName</th>
+        <th>DrinkerID</th>
+        
+        
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-t>
+      <tr>
+        <td>{{ t.DrinkerName}}</td>
+        <td>{{ t.DrinkerID}}</td>
+
+             
+      </tr>
+    </ng-template>
+  </p-table>
+</div>
+
+<div class="container">
+  <br>
+  <div id="bargraph"></div>
+</div>
+
+<div class="container">
+  <br>
+  <div id="bargraph2"></div>
+</div>
