--- a/bar-beer-drinker-ui/src/app/manufacturer-page/manufacturer-page.component.html
+++ b/bar-beer-drinker-ui/src/app/manufacturer-page/manufacturer-page.component.html
@@ -1,3 +1,28 @@
-<p>
-  manufacturer-page works!
-</p>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">Manufacturers</h1>
+    <p class="lead">Sales and manufacturer related information</p>
+    <p-dropdown *ngIf="manufacturerOptions" [ngClass]="{ 'no-option-selected': selectedManufacturer === undefined || selectedManufacturer === null }"
+      placeholder="Filter by manufacturer" [options]="manufacturerOptions" [(ngModel)]="selectedManufacturer" showClear="true"
+      (onChange)="filterBeers($event.value)"></p-dropdown>
+  </div>
+</div>
+<br>
+
+<div class="container">
+  <h2 class="text-center font-weight-light">Manufacturers</h2>
+  <p-table [value]="beers" [paginator]="true" [rows]="10">
+    <ng-template pTemplate="header">
+      <tr>
+        <th>Name</th>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-beer>
+      <tr>
+        <td><a routerLink="/manufacturer_page/{{ beer.Manf }}">{{ beer.Manf }}</a></td>
+        
+      </tr>
+    </ng-template>
+  </p-table>
+  <br><br>
+</div>
