--- a/bar-beer-drinker-ui/src/app/drinker-details/drinker-details.component.html
+++ b/bar-beer-drinker-ui/src/app/drinker-details/drinker-details.component.html
@@ -11,22 +11,23 @@
 
 <div class="container">
     <br>
-    <div>
-      <span class="font-weight-light result-count">Sold at {{ beerLocations?.length }}</span>
-      <p-dropdown class="float-right text-left" *ngIf="filterOptions" [options]="filterOptions" (onChange)="sortBy($event.value)"></p-dropdown>
-    </div>
+
     <br>
-    <p-table [value]="beerLocations" sortMode="multiple" sortField="price">
+    <p-table [value]="peopleSpendings" sortMode="multiple" sortField="price">
       <ng-template pTemplate="header">
         <tr>
-          <th>Bar</th>
-          
+          <th>Time</th>
+          <th>BarName</th>
+          <th>TransactionID</th>
         </tr>
       </ng-template>
-      <ng-template pTemplate="body" let-bar>
+      <ng-template pTemplate="body" let-t>
         <tr>
-          <td><a routerLink="/bars/{{ bar.bar }}">{{ bar.BarName }}</a></td>
-               
+          <td>{{ t.time }}</td>
+          <td>{{ t.BarName}}</td>
+          <td>{{ t.TransactionID}}</td>
+
+
         </tr>
       </ng-template>
     </p-table>
