--- a/bar-beer-drinker-ui/src/app/manufacturer-page/manufacturer-page.component.html
+++ b/bar-beer-drinker-ui/src/app/manufacturer-page/manufacturer-page.component.html
@@ -9,20 +9,29 @@
 </div>
 <br>
 
+
 <div class="container">
-  <h2 class="text-center font-weight-light">Manufacturers</h2>
-  <p-table [value]="beers" [paginator]="true" [rows]="10">
+  <p-table [value]="bars">
     <ng-template pTemplate="header">
-      <tr>
-        <th>Name</th>
-      </tr>
+        <tr>
+          <th>barName</th>
+          <th>barLicence</th>
+          <th>State</th>
+
+        </tr>
     </ng-template>
-    <ng-template pTemplate="body" let-beer>
-      <tr>
-        <td><a routerLink="/manufacturer_page/{{ beer.Manf }}">{{ beer.Manf }}</a></td>
-        
-      </tr>
+    <ng-template pTemplate="body" let-bar>
+        <tr>
+          <td>
+            <a routerLink="/bars/{{ bar.BarName }}">
+              {{ bar.BarName }}
+            </a>
+          </td>
+          <td>{{ bar.BarLicense }}</td>
+          <td>{{ bar.State }}</td>
+
+        </tr>
     </ng-template>
   </p-table>
-  <br><br>
 </div>
+<br><br>
