--- a/bar-beer-drinker-ui/src/app/beer-details/beer-details.component.html
+++ b/bar-beer-drinker-ui/src/app/beer-details/beer-details.component.html
@@ -25,7 +25,7 @@
     </ng-template>
     <ng-template pTemplate="body" let-bar>
       <tr>
-        <td><a routerLink="/bars/{{ bar.bar }}">{{ bar.BarName }}</a></td>
+        <td>{{ bar.BarName }}</td>
              
       </tr>
     </ng-template>
@@ -60,5 +60,31 @@
 
 <div class="container">
   <br>
-  <div id="bargraph"></div>
+  <div>
+    <span class="font-weight-light result-count">Times when this beer sells the most</span>
+
+  </div>
+  <br>
+  <p-table [value]="timeDistro" sortMode="multiple" sortField="price">
+    <ng-template pTemplate="header">
+      <tr>
+
+        <th>Time</th>
+        <th>Quantity Sold</th>
+
+
+
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-time>
+      <tr>
+        <td>{{ time.Date}}</td>
+        <td>{{ time.finalQ}}</td>
+
+
+      </tr>
+    </ng-template>
+  </p-table>
 </div>
+
+
