drinker page getting done with trans details

--- a/bar-beer-drinker-ui/src/app/drinker-details/drinker-details.component.html
+++ b/bar-beer-drinker-ui/src/app/drinker-details/drinker-details.component.html
@@ -25,7 +25,7 @@
         <tr>
           <td>{{ t.time }}</td>
           <td>{{ t.BarName}}</td>
-          <td><a routerLink="/drinker_page/{{ t.TransactionID }}">{{ t.TransactionID}}</a></td>
+          <td><a routerLink="/transaction/{{ t.TransactionID }}">{{ t.TransactionID}}</a></td>
 
         </tr>
       </ng-template>
