--- a/bar-beer-drinker-ui/src/app/welcome/welcome.component.html
+++ b/bar-beer-drinker-ui/src/app/welcome/welcome.component.html
@@ -1,6 +1,6 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4">BarPage!</h1>
+    <h1 class="display-4">Bar Page</h1>
     <p class="lead">Created by Rahil Chertara, Matt Cho, Russell Dsani.</p>
   </div>
 </div>
