--- a/bar-beer-drinker-ui/src/app/beer-details/beer-details.component.html
+++ b/bar-beer-drinker-ui/src/app/beer-details/beer-details.component.html
@@ -78,7 +78,7 @@
     </ng-template>
     <ng-template pTemplate="body" let-time>
       <tr>
-        <td>{{ time.Date}}</td>
+        <td>{{ time.Time}}</td>
         <td>{{ time.finalQ}}</td>
 
 
