--- a/bar-beer-drinker-ui/src/app/bar-spendings/bar-spendings.component.html
+++ b/bar-beer-drinker-ui/src/app/bar-spendings/bar-spendings.component.html
@@ -2,3 +2,13 @@
   <br>
   <div id="bargraph"></div>
 </div>
+
+<div class="container">
+  <br>
+  <div id="bargraph2"></div>
+</div>
+
+<div class="container">
+  <br>
+  <div id="bargraph3"></div>
+</div>
