--- a/bar-beer-drinker-ui/src/app/manufacturer-detail/manufacturer-detail.component.html
+++ b/bar-beer-drinker-ui/src/app/manufacturer-detail/manufacturer-detail.component.html
@@ -11,52 +11,33 @@
 
 <div class="container">
   <br>
-  <div>
-    <span class="font-weight-light result-count">Sold at {{ beerLocations?.length }}</span>
-    <p-dropdown class="float-right text-left" *ngIf="filterOptions" [options]="filterOptions" (onChange)="sortBy($event.value)"></p-dropdown>
-  </div>
+
   <br>
   <p-table [value]="beerLocations" sortMode="multiple" sortField="price">
     <ng-template pTemplate="header">
       <tr>
-        <th>Bar</th>
+        <th>State</th>
+        <th>City</th>
+        <th>Sum</th>
         
       </tr>
     </ng-template>
-    <ng-template pTemplate="body" let-bar>
+    <ng-template pTemplate="body" let-m>
       <tr>
-        <td><a routerLink="/bars/{{ bar.bar }}">{{ bar.BarName }}</a></td>
-             
+        <td>{{m.State}}</td>
+        <td>{{m.City}}</td>
+        <td>{{m.Sum}}</td>
+
       </tr>
     </ng-template>
   </p-table>
 </div>
 
 
-<div class="container">
-  <br>
-  <div>
-    <span class="font-weight-light result-count">Sold at {{ beerLocations?.length }}</span>
-    <p-dropdown class="float-right text-left" *ngIf="filterOptions" [options]="filterOptions" (onChange)="sortBy($event.value)"></p-dropdown>
-  </div>
-  <br>
-  <p-table [value]="peopleWhoDrink" sortMode="multiple" sortField="price">
-    <ng-template pTemplate="header">
-      <tr>
-        <th>Drinker</th>
-        
-        
-      </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-drinker>
-      <tr>
-        <td>{{ drinker.DrinkerName }}</td>
-       
-        
-      </tr>
-    </ng-template>
-  </p-table>
-</div>
+
+
+
+
 
 <div class="container">
   <br>
