--- a/bar-beer-drinker-ui/src/app/manufacturer-page/manufacturer-page.component.html
+++ b/bar-beer-drinker-ui/src/app/manufacturer-page/manufacturer-page.component.html
@@ -1,37 +1,21 @@
-<div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h1 class="display-4">Manufacturers</h1>
-    <p class="lead">Sales and manufacturer related information</p>
-    <p-dropdown *ngIf="manufacturerOptions" [ngClass]="{ 'no-option-selected': selectedManufacturer === undefined || selectedManufacturer === null }"
-      placeholder="Filter by manufacturer" [options]="manufacturerOptions" [(ngModel)]="selectedManufacturer" showClear="true"
-      (onChange)="filterBeers($event.value)"></p-dropdown>
-  </div>
-</div>
-<br>
-
-
 <div class="container">
-  <p-table [value]="bars">
+  <br>
+  <div>
+    <span class="font-weight-light result-count">All Manufacturers</span>
+    <p-dropdown class="float-right text-left" *ngIf="filterOptions" [options]="filterOptions" (onChange)="sortBy($event.value)"></p-dropdown>
+  </div>
+  <br>
+  <p-table [value]="allManfs" sortMode="multiple" sortField="price">
     <ng-template pTemplate="header">
-        <tr>
-          <th>barName</th>
-          <th>barLicence</th>
-          <th>State</th>
+      <tr>
 
-        </tr>
+        <th>Manufacturer Name</th>
+      </tr>
     </ng-template>
-    <ng-template pTemplate="body" let-bar>
-        <tr>
-          <td>
-            <a routerLink="/bars/{{ bar.BarName }}">
-              {{ bar.BarName }}
-            </a>
-          </td>
-          <td>{{ bar.BarLicense }}</td>
-          <td>{{ bar.State }}</td>
-
-        </tr>
+    <ng-template pTemplate="body" let-m>
+      <tr>
+        <td><a routerLink="/manufacturer_page/{{ m.Manf}}">{{m.Manf}}</a></td>
+      </tr>
     </ng-template>
   </p-table>
 </div>
-<br><br>
