--- a/bar-beer-drinker-ui/src/app/drinker-page/drinker-page.component.html
+++ b/bar-beer-drinker-ui/src/app/drinker-page/drinker-page.component.html
@@ -12,7 +12,7 @@
 <div class="container">
   <br>
   <div>
-    <span class="font-weight-light result-count">Shows Drinker's Transactions</span>
+    <span class="font-weight-light result-count">All Drinkers</span>
     <p-dropdown class="float-right text-left" *ngIf="filterOptions" [options]="filterOptions" (onChange)="sortBy($event.value)"></p-dropdown>
   </div>
   <br>
