--- a/bar-beer-drinker-ui/src/app/app.component.html
+++ b/bar-beer-drinker-ui/src/app/app.component.html
@@ -7,7 +7,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" routerLink="/bars">Home</a>
+        <a class="nav-link" routerLink="/bars">Bars</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" routerLink="/beers">Beers</a>
