--- a/bar-beer-drinker-ui/src/app/bar-details/bar-details.component.html
+++ b/bar-beer-drinker-ui/src/app/bar-details/bar-details.component.html
@@ -1,8 +1,24 @@
 
 
 
+
+<div>
+  <p-dropdown class=""></p-dropdown> <!--first graph -->
+</div>
+
 <div class="container">
     <br>
     <div id="bargraph"></div>
   </div>
+
+
+
+
+<div>
+<p-dropdown class="" [options]="dayOptions" (onChange)= "doSecondQuery($event.value)"></p-dropdown>
+</div>
+<div class="container">
+
+  <div id="bargraph2"></div>
+</div>
 
