gonna start bartender details

--- a/bar-beer-drinker-ui/src/app/bar-details/bar-details.component.html
+++ b/bar-beer-drinker-ui/src/app/bar-details/bar-details.component.html
@@ -2,10 +2,8 @@
 
 
 
-<div>
-  <p-dropdown class=""></p-dropdown> <!--first graph -->
-</div>
 
+<p-dropdown class=""></p-dropdown>
 <div class="container">
     <br>
     <div id="bargraph"></div>
@@ -20,5 +18,29 @@
 <div class="container">
 
   <div id="bargraph2"></div>
+</div>
+
+
+<div class="container">
+
+  <div id="bargraph3a"></div>
+</div>
+
+<div class="container">
+
+  <div id="bargraph3b"></div>
+</div>
+
+<div class="container">
+
+  <div id="bargraph4"></div>
+</div>
+
+<div>
+  <p-dropdown class=""></p-dropdown>
+</div>
+
+<div>
+  <p-dropdown class="" [options]="dayOptions" ></p-dropdown>
 </div>
 
