mod page last table

--- a/bar-beer-drinker-ui/src/app/bar-details/bar-details.component.html
+++ b/bar-beer-drinker-ui/src/app/bar-details/bar-details.component.html
@@ -3,8 +3,10 @@
 
 
 
-<p-dropdown class=""></p-dropdown>
+
+
 <div class="container">
+  <h2>This page is correct but takes over a minute to load all results please be patient</h2>
     <br>
     <div id="bargraph"></div>
   </div>
