mod page done front end and middle side

--- a/bar-beer-drinker-ui/src/app/bartender-page/bartender-page.component.html
+++ b/bar-beer-drinker-ui/src/app/bartender-page/bartender-page.component.html
@@ -98,7 +98,7 @@
 
 <br>
 <div class="container">
-  <p-button label="Return Rankings" (onClick)="doBartenderPageQury2()"></p-button>
+  <p-button label="Find top bartedners"(onClick)="doBartenderPageQury2()"></p-button>
 </div>
 
 <br>
