--- a/bar-beer-drinker-ui/src/app/modification-page/modification-page.component.html
+++ b/bar-beer-drinker-ui/src/app/modification-page/modification-page.component.html
@@ -1,13 +1,20 @@
 <div class="container">
 
-  <h2>Enter a SQL query within a box provided under a table to add, edit, or delete a row from that table</h2>
+  <h2>Enter a SQL insertion/deletion/update query within this box provided to add, edit, or delete a row from a table</h2>
+  <h6>All Tables are given below!</h6>
+  <textarea #queryBox [rows]="10" [cols]="50" pInputTextarea autoResize="autoResize"></textarea>
+  <p-messages [(value)]="msgs"></p-messages>
+
+
+  <br>
+  <p-button (onClick)="exeQuery(queryBox.value)" label="Execute Query" ></p-button>
   <br>
 
 
   <div >
     <h1>BarTable</h1>
 
-    <p-table [value]="allBars"[paginator]="true" [rows]="50">
+    <p-table [value]="allBars"[paginator]="true" [rows]="20">
       <ng-template pTemplate="header">
         <tr>
           <th>BarName</th>
@@ -25,10 +32,10 @@
             {{ bar.BarLicense }}
           </td>
           <td>
-            {{ bar.City }}
+            {{ bar.State }}
           </td>
           <td>
-            {{ bar.State }}
+            {{ bar.City}}
           </td>
 
 
@@ -36,7 +43,9 @@
       </ng-template>
     </p-table>
 
-    <textarea pInputTextarea autoResize="autoResize"></textarea>
+
+    <br>
+
 
   </div>
 
@@ -45,7 +54,7 @@
   <div >
     <h1>DrinkerTable</h1>
 
-    <p-table [value]="allDrinkers"[paginator]="true" [rows]="50">
+    <p-table [value]="allDrinkers"[paginator]="true" [rows]="20">
       <ng-template pTemplate="header">
         <tr>
           <th>DrinkerName</th>
@@ -67,7 +76,7 @@
         </tr>
       </ng-template>
     </p-table>
-    <textarea pInputTextarea autoResize="autoResize"></textarea>
+
   </div>
 
   <br>
@@ -75,7 +84,7 @@
   <div >
     <h1>ItemsTable</h1>
 
-    <p-table [value]="allItems"[paginator]="true" [rows]="50">
+    <p-table [value]="allItems"[paginator]="true" [rows]="20">
       <ng-template pTemplate="header">
         <tr>
           <th>ItemID</th>
@@ -98,7 +107,7 @@
         </tr>
       </ng-template>
     </p-table>
-    <textarea pInputTextarea autoResize="autoResize"></textarea>
+
   </div>
 
   <br>
@@ -106,7 +115,7 @@
   <div >
     <h1>BartenderTable</h1>
 
-    <p-table [value]="allBartenders"[paginator]="true" [rows]="50">
+    <p-table [value]="allBartenders"[paginator]="true" [rows]="20">
       <ng-template pTemplate="header">
         <tr>
           <th>BartenderName</th>
@@ -133,14 +142,14 @@
         </tr>
       </ng-template>
     </p-table>
-    <textarea pInputTextarea autoResize="autoResize"></textarea>
+
   </div>
   <br>
 
   <div >
     <h1>BillTable</h1>
 
-    <p-table [value]="allBills"[paginator]="true" [rows]="50">
+    <p-table [value]="allBills"[paginator]="true" [rows]="20">
       <ng-template pTemplate="header">
         <tr>
           <th>BillID</th>
@@ -170,14 +179,14 @@
         </tr>
       </ng-template>
     </p-table>
-    <textarea pInputTextarea autoResize="autoResize"></textarea>
+
   </div>
 
   <br>
   <div >
     <h1>FrequentTable</h1>
 
-    <p-table [value]="allFreq"[paginator]="true" [rows]="50">
+    <p-table [value]="allFreq"[paginator]="true" [rows]="20">
       <ng-template pTemplate="header">
         <tr>
           <th>BarLicense</th>
@@ -197,7 +206,7 @@
         </tr>
       </ng-template>
     </p-table>
-    <textarea pInputTextarea autoResize="autoResize"></textarea>
+
   </div>
 
   <br>
@@ -205,7 +214,7 @@
   <div >
     <h1>LikesTable</h1>
 
-    <p-table [value]="allLikes"[paginator]="true" [rows]="50">
+    <p-table [value]="allLikes"[paginator]="true" [rows]="20">
       <ng-template pTemplate="header">
         <tr>
           <th>DrinkerID</th>
@@ -225,7 +234,7 @@
         </tr>
       </ng-template>
     </p-table>
-    <textarea pInputTextarea autoResize="autoResize"></textarea>
+
   </div>
 
   <br>
@@ -233,7 +242,7 @@
   <div >
     <h1>Operations</h1>
 
-    <p-table [value]="allops"[paginator]="true" [rows]="50">
+    <p-table [value]="allops"[paginator]="true" [rows]="20">
       <ng-template pTemplate="header">
         <tr>
           <th>BarLicense</th>
@@ -255,14 +264,14 @@
         </tr>
       </ng-template>
     </p-table>
-    <textarea pInputTextarea autoResize="autoResize"></textarea>
+
   </div>
 
   <br>
   <div >
     <h1>Works</h1>
 
-    <p-table [value]="allworks"[paginator]="true" [rows]="50">
+    <p-table [value]="allworks"[paginator]="true" [rows]="20">
       <ng-template pTemplate="header">
         <tr>
           <th>BarLicense</th>
@@ -286,7 +295,7 @@
         </tr>
       </ng-template>
     </p-table>
-    <textarea pInputTextarea autoResize="autoResize"></textarea>
+
   </div>
 
   <br>
@@ -294,7 +303,7 @@
   <div >
     <h1>SellsTable</h1>
 
-    <p-table [value]="allsells"[paginator]="true" [rows]="50">
+    <p-table [value]="allsells"[paginator]="true" [rows]="20">
       <ng-template pTemplate="header">
         <tr>
           <th>BarLicense</th>
@@ -315,7 +324,8 @@
         </tr>
       </ng-template>
     </p-table>
-    <textarea pInputTextarea autoResize="autoResize"></textarea>
+
+
   </div>
 
   <br>
@@ -323,7 +333,7 @@
   <div >
     <h1>TransactionTable</h1>
 
-    <p-table [value]="allTrans"[paginator]="true" [rows]="50">
+    <p-table [value]="allTrans"[paginator]="true" [rows]="20">
       <ng-template pTemplate="header">
         <tr>
           <th>TransactionID</th>
@@ -352,7 +362,7 @@
         </tr>
       </ng-template>
     </p-table>
-    <textarea pInputTextarea autoResize="autoResize"></textarea>
+
   </div>
 
 
