mod page done front end and middle side

--- a/bar-beer-drinker-ui/src/app/bartender-page/bartender-page.component.html
+++ b/bar-beer-drinker-ui/src/app/bartender-page/bartender-page.component.html
@@ -53,16 +53,13 @@
     <ng-template pTemplate="body" let-shift>
       <tr>
         <td>
-         {{ shift.Start }}|{{ shift.Close }}
-
+          {{ shift.Date}}|{{ shift.Start }}|{{ shift.Close }}
         </td>
         <td>
           {{ shift.name }}
-
         </td>
-
         <td>
-          {{ shift.BarLicense}}
+          {{ shift.finalQ}}
         </td>
 
 
