mod page done front end and middle side

--- a/bar-beer-drinker-ui/src/app/app.component.html
+++ b/bar-beer-drinker-ui/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Bar Beer Drinker</a>
+  <!--<a class="navbar-brand" href="#">Bar Beer Drinker</a> -->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -25,6 +25,9 @@
       </li>
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" routerLink="/modification_page">Modifications</a> <!-- Bartender page added --> 
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="/verification">Verification</a> <!-- Bartender page added -->
       </li>
     </ul>
   </div>
