--- a/bar-beer-drinker-ui/src/app/modification-page/modification-page.component.html
+++ b/bar-beer-drinker-ui/src/app/modification-page/modification-page.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 
   <h2>Enter a SQL insertion/deletion/update query within this box provided to add, edit, or delete a row from a table</h2>
-  <h6>All Tables are given below!</h6>
+  <h6>All Tables are given below, make sure to add semicolon at end of query!</h6>
   <textarea #queryBox [rows]="10" [cols]="50" pInputTextarea autoResize="autoResize"></textarea>
   <p-messages [(value)]="msgs"></p-messages>
 
